# frosty-planning

./: .gitignore  MultiSet.hs  README.mkd  Results.hs  Scoring.hs  Table.hs  archive.html  fetch-tides.sh  frostie-planning.cabal  frosty-planning.cabal  rankings.css  rankings.js  upload.sh
.github/workflows/: deploy.yml
app/: Export.hs  Main.hs  ToICal.hs
results/2022-11-13/: R1  R2  R3  R4  R5  R6  R7
results/2022-11-20/: R1  R2  R3  R4  R5  R6  R7
results/2022-11-27/: R1  R2  R3  R4  R5
results/2022-12-04/: R2  R3  R4
results/2022-12-11/: R1  R2  R3  R4  R5
results/2022-2023/2022-11-13/: R1  R3  R4
results/2022-2023/2022-11-20/: R3  R4
results/2022-2023/2022-11-27/: R1  R2  R5
results/2022-2023/2022-12-04/: R1  R3
results/2022-2023/2022-12-11/: R1
results/2022-2023/2022-12-18/: R1
results/2022-2023/2023-01-01/: R4  R5  R6
results/2022-2023/2023-01-08/: R1  R3  R4
results/2022-2023/2023-01-15/: R2
results/2022-2023/2023-01-22/: R1  R2  R3  R4
results/2022-2023/2023-01-29/: R2  R6
results/2022-2023/2023-02-05/: R1  R5  R6  R7
results/2022-2023/2023-02-12/: R1  R4  R5  R6
results/2022-2023/2023-02-19/: R1  R2  R3  R5
results/2023-01-01/: R3  R4  R5  R6  R7
results/2023-01-08/: R1  R2  R3  R4  R5  R6
results/2023-01-15/: R1  R2  R3
results/2023-01-22/: R1  R2  R3  R4
results/2023-01-29/: R1  R3  R4  R5
results/2023-02-05/: R2  R3  R4  R8
results/2023-02-12/: R2  R3
results/2023-02-19/: R4
results/2023-02-26/: R3  R4
results/2023-03-05/: R1  R2  R3  R4
results/2023-03-12/: R2  R3  R4  R7
results/2023-03-26/: R1
results/2023-04-17/: R1  R2  R3  R4  R5  R6
results/2023-05-06/: R1  R10  R3  R6  R7
results/2023-05-06-and-2023-05-07/: R1  R12  R2  R4  R5  R8
results/2023-05-07/: R7
src/: ICal.hs
(+297 files in other folders)
