cabal-version:      2.4
name:               frosty-planning
version:            0.1.0.0
license:            BSD-3-Clause
author:             Ben Gamari
maintainer:         ben@smart-cactus.org
copyright:          (c) 2022 Ben Gamari
-- category:
extra-source-files: CHANGELOG.md

executable frosty-planning
    main-is:          Main.hs
    build-depends:    base ^>=4.15.1.0,
                      time,
                      solar,
                      bytestring,
                      vector,
                      containers,
                      cassava
    hs-source-dirs:   app
    default-language: Haskell2010
